--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Flask==3.1.0
 frozenlist==1.5.0
 h11==0.14.0
 idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
@@ -29,12 +30,16 @@ MarkupSafe==3.0.2
 multidict==6.1.0
 mysqlclient==2.2.5
 numpy==2.1.3
+packaging==24.2
 pandas==2.2.3
+pluggy==1.5.0
 propcache==0.2.0
 pycparser==2.22
 pydantic==2.9.1
 pydantic_core==2.23.3
 PyJWT==2.9.0
+pytest==8.3.3
+pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
