--- a/.github/workflows/pipetest.yml
+++ b/.github/workflows/pipetest.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Activate virtual environment
         run: |
-          source venv/bin/activate  
+          source scripts/activate  
 
       - name: Install dependencies
         run: |
