--- a/.github/workflows/pipetest.yml
+++ b/.github/workflows/pipetest.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           python-version: '3.9'
 
+      - name: Activate virtual environment
+        run: |
+          source Projeto-IA/scripts/activate  
+
       - name: Install dependencies
         run: |
           pip install --upgrade pip
