--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,24 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
-aiosignal==1.3.1
-annotated-types==0.7.0
-APScheduler==3.10.4
-asgiref==3.8.1
-attrs==24.2.0
-Authlib==1.3.2
 blinker==1.9.0
-certifi==2024.8.30
-cffi==1.17.1
-channels==4.1.0
-charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
-cryptography==43.0.1
-Django==5.1.1
-django-cors-headers==4.5.0
-django-ninja==1.3.0
-django-ninja-simple-jwt==0.6.1
 Flask==3.1.0
-frozenlist==1.5.0
-h11==0.14.0
-idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
-MarkupSafe==3.0.2
-multidict==6.1.0
-mysqlclient==2.2.5
+MarkupSafe==3.0.2P
 numpy==2.1.3
 packaging==24.2
 pandas==2.2.3
 pluggy==1.5.0
-propcache==0.2.0
-pycparser==2.22
-pydantic==2.9.1
-pydantic_core==2.23.3
-PyJWT==2.9.0
 pytest==8.3.3
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 pytz==2024.2
-requests==2.32.3
 scikit-learn==1.5.2
 scipy==1.14.1
 six==1.16.0
-sqlparse==0.5.1
 threadpoolctl==3.5.0
-typing_extensions==4.12.2
-tzdata==2024.1
-tzlocal==5.2
-urllib3==2.2.3
-uvicorn==0.30.6
-websockets==13.0.1
+tzdata==2024.2
 Werkzeug==3.1.3
-windows-curses==2.4.0
 xgboost==2.1.2
-yarl==1.17.0
